[package]
authors.workspace = true
categories = ["api-bindings", "development-tools::build-utils"]
description = "Lean 4 toolchain discovery, fingerprinting, symbol allowlist, and build-script helpers reusable by downstream embedders' own build.rs scripts."
documentation = "https://docs.rs/lean-toolchain"
edition.workspace = true
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "build.rs", "src/**/*.rs", "tests/**/*.rs"]
keywords = ["build", "fingerprint", "lean", "lean4", "toolchain"]
license.workspace = true
name = "lean-toolchain"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
fs4 = { workspace = true }
lean-rs-abi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }

[build-dependencies]
# `lean-rs-abi` is purely static (no build script, no Lean link), so depending
# on it here pulls in no Lean runtime: the build script reads
# `SUPPORTED_TOOLCHAINS` to match the active `lean.h` against the supported
# window and to fall back to the latest supported entry on a metadata-only
# build with no toolchain present.
lean-rs-abi = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []
