[package]
name = "shipped-lean-crate"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "shipped-lean-crate"

include = [
  "Cargo.toml",
  "build.rs",
  "examples/**/*.rs",
  "src/**/*.rs",
  "lean/**/*.lean",
  "lean/lakefile.lean",
  "lean/lean-toolchain",
  "lean/lake-manifest.json",
]

[workspace]

[dependencies]
lean-rs = { path = "../../crates/lean-rs" }
lean-rs-worker = { path = "../../crates/lean-rs-worker" }

[build-dependencies]
lean-toolchain = { path = "../../crates/lean-toolchain" }

[[bin]]
name = "shipped-lean-crate"
path = "src/main.rs"

[[bin]]
name = "shipped-lean-crate-worker"
path = "src/bin/shipped_lean_crate_worker.rs"
