[package]
name = "shipped-lean-crate"
version = "0.1.0"
edition = "2024"
description = "Template showing how to ship Lean source in a Rust crate with lean-rs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcreinhold/lean-rs"
publish = false
default-run = "shipped-lean-crate"

include = [
  "Cargo.toml",
  "build.rs",
  "examples/**/*.rs",
  "src/**/*.rs",
  "lean/**/*.lean",
  "lean/lakefile.lean",
  "lean/lean-toolchain",
  "lean/lake-manifest.json",
]

[workspace]

[dependencies]
lean-rs = { path = "../../crates/lean-rs" }
lean-rs-worker-child = { path = "../../crates/lean-rs-worker-child" }
lean-rs-worker-parent = { path = "../../crates/lean-rs-worker-parent" }

[build-dependencies]
lean-toolchain = { path = "../../crates/lean-toolchain" }

[[bin]]
name = "shipped-lean-crate"
path = "src/main.rs"

[[bin]]
name = "shipped-lean-crate-worker"
path = "src/bin/shipped_lean_crate_worker.rs"
