[package]
edition = "2024"
name = "lean-rs-fuzz"
publish = false
rust-version = "1.95"
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
lean-rs = { path = "..", features = ["fuzzing"] }
lean-rs-sys = { path = "../../lean-rs-sys" }
libfuzzer-sys = "0.4"

[[bin]]
bench = false
doc = false
name = "abi_decode"
path = "fuzz_targets/abi_decode.rs"
test = false

# Workspace exclusion: the parent Cargo workspace does not build the
# fuzz crate by default (it needs nightly). The fuzz target is invoked
# explicitly via `cargo +nightly fuzz run abi_decode`.
[workspace]
